# rttf-edgecar

./: .gitignore  README.md  deployment.debug.template.json  deployment.template.json  docker-compose.yml
ai-driver/: run_ai_module.sh
ai-driver/catkin_ws/src/driving_module/: setup.py
arduino pro micro software/wireless-rc-adapter-2.1/: calibration.ino  pwm.ino  wireless-rc-adapter-2.1.ino
cardrivers/: Dockerfile
deprectated_modules/AiDrivingModule/: Dockerfile copy.arm32v7  requirements.txt
deprectated_modules/CarDrivers/: docker_setup.sh  module.json  requirements.txt  run_all_drivers.sh
deprectated_modules/CarDrivers/qemu/: vc.tgz
modules/AiDrivingModule/: Dockerfile.arm32v7  docker_setup.sh  module.json  requirements.txt
modules/CarDrivers/: .dockerignore  .gitignore  Dockerfile.arm32v7
modules/CarDrivers/catkin_ws/src/adafruit_drivers/: package.xml
modules/CarDrivers/catkin_ws/src/camera_driver/: package.xml
modules/CarDrivers/catkin_ws/src/camera_driver/launch/: camera_node.launch
pi-comm/: Dockerfile  commander_webserver.py  requirements.txt  run_pi_comm_container.sh  start_picomm.sh
pi-comm/rttfcar_commander/: commander_webserver_with_cam.py  index.html  talker.py  test.py
pi-comm/rttfcar_commander/static/: JoystickController.js  camview.js  config.js  controls.js  setup.js  style.css
pi-comm/rttfcar_commander/templates/: with_cam.html
scripts/: rosbag_play_loop.sh  rosnode_list.sh  rostopic_echo.sh  rostopic_list.sh  rostopic_pub_test.sh  run_ai_module.sh  start_ai.sh  start_rosbridge.sh
(+55 files in other folders)
