<?xml version="1.0"?>
<package format="2">
  <name>adafruit_drivers</name>
  <version>0.0.1</version>
  <description>The adafruit_drivers package</description>

  <maintainer email="enicky@todo.todo">enicky</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
