<?xml version="1.0"?>
<package format="2">
  <name>camera_driver</name>
  <version>0.0.1</version>
  <description>The camera_driver package</description>

  <maintainer email="enicky80@gmail.com">NicholasE</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>edgecar_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>edgecar_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
